--- a/daytoday/src/daytoday/Event_Builder.fxml
+++ b/daytoday/src/daytoday/Event_Builder.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
@@ -24,18 +25,17 @@
                         <Font name="System Bold" size="32.0" />
                      </font>
                   </Label>
-                  <ChoiceBox layoutX="326.0" layoutY="60.0" prefHeight="31.0" prefWidth="222.0" />
                   <Label layoutX="298.0" layoutY="14.0" prefHeight="46.0" prefWidth="278.0" text="Is this event reoccuring?" textAlignment="CENTER">
                      <font>
                         <Font name="System Bold" size="24.0" />
                      </font>
                   </Label>
+                  <ComboBox fx:id="reoccurBox" layoutX="326.0" layoutY="62.0" prefHeight="29.0" prefWidth="222.0" />
                   <Label layoutX="69.0" layoutY="116.0" prefHeight="27.0" prefWidth="458.0" text="Does this event have a set end time and/or start time?" textAlignment="CENTER">
                      <font>
                         <Font name="System Bold" size="18.0" />
                      </font>
                   </Label>
-                  <ChoiceBox layoutX="82.0" layoutY="144.0" prefHeight="31.0" prefWidth="430.0" />
                   <Label alignment="CENTER" layoutX="113.0" layoutY="187.0" prefHeight="29.0" prefWidth="370.0" text="Start Time" textAlignment="CENTER">
                      <font>
                         <Font name="System Bold" size="32.0" />
@@ -99,6 +99,7 @@
                   </Label>
                   <Label alignment="CENTER" layoutX="87.0" layoutY="760.0" prefHeight="22.0" prefWidth="455.0" text="Other keywords to find this event when searching. Seperate keywords with commas" textAlignment="CENTER" />
                   <TextArea layoutX="84.0" layoutY="798.0" prefHeight="98.0" prefWidth="458.0" promptText="Enter keywords here" />
+                  <ComboBox fx:id="setTimeBox" layoutX="79.0" layoutY="143.0" prefHeight="29.0" prefWidth="436.0" />
                </children>
             </AnchorPane>
         </content>
