--- a/daytoday/src/daytoday/Event_Builder.fxml
+++ b/daytoday/src/daytoday/Event_Builder.fxml
@@ -17,7 +17,7 @@
    <children>
       <ScrollPane hbarPolicy="NEVER" layoutX="376.0" layoutY="90.0" prefHeight="553.0" prefWidth="610.0">
         <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="1013.0" prefWidth="595.0">
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="923.0" prefWidth="595.0">
                <children>
                   <TextField layoutX="31.0" layoutY="61.0" prefHeight="30.0" prefWidth="223.0" promptText="Event Name" />
                   <Label layoutX="26.0" layoutY="14.0" prefHeight="46.0" prefWidth="234.0" text="Name of event" textAlignment="CENTER">
@@ -30,7 +30,7 @@
                         <Font name="System Bold" size="24.0" />
                      </font>
                   </Label>
-                  <ComboBox fx:id="reoccurBox" layoutX="326.0" layoutY="62.0" prefHeight="29.0" prefWidth="222.0" />
+                  <ComboBox id="one-time-elements" fx:id="reoccurBox" layoutX="326.0" layoutY="62.0" prefHeight="29.0" prefWidth="222.0" stylesheets="@application.css" />
                   <Label layoutX="69.0" layoutY="116.0" prefHeight="27.0" prefWidth="458.0" text="Does this event have a set end time and/or start time?" textAlignment="CENTER">
                      <font>
                         <Font name="System Bold" size="18.0" />
