--- a/daytoday/src/daytoday/Event_Builder.fxml
+++ b/daytoday/src/daytoday/Event_Builder.fxml
@@ -19,7 +19,7 @@
         <content>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="923.0" prefWidth="595.0">
                <children>
-                  <TextField layoutX="31.0" layoutY="61.0" prefHeight="30.0" prefWidth="223.0" promptText="Event Name" />
+                  <TextField fx:id="eventField" layoutX="31.0" layoutY="61.0" prefHeight="30.0" prefWidth="223.0" promptText="Event Name" />
                   <Label layoutX="26.0" layoutY="14.0" prefHeight="46.0" prefWidth="234.0" text="Name of event" textAlignment="CENTER">
                      <font>
                         <Font name="System Bold" size="32.0" />
@@ -41,9 +41,9 @@
                         <Font name="System Bold" size="32.0" />
                      </font>
                   </Label>
-                  <DatePicker layoutX="115.0" layoutY="235.0" prefHeight="34.0" prefWidth="183.0" promptText="Start Date" />
-                  <TextField layoutX="308.0" layoutY="235.0" prefHeight="34.0" prefWidth="75.0" promptText="Hour" />
-                  <TextField layoutX="406.0" layoutY="235.0" prefHeight="34.0" prefWidth="75.0" promptText="Minute" />
+                  <DatePicker fx:id="startDateField" layoutX="115.0" layoutY="235.0" prefHeight="34.0" prefWidth="183.0" promptText="Start Date" />
+                  <TextField fx:id="startHourField" layoutX="308.0" layoutY="235.0" prefHeight="34.0" prefWidth="75.0" promptText="Hour" />
+                  <TextField fx:id="startMinuteField" layoutX="406.0" layoutY="235.0" prefHeight="34.0" prefWidth="75.0" promptText="Minute" />
                   <Label layoutX="389.0" layoutY="221.0" prefHeight="54.0" prefWidth="4.0" text=":" textAlignment="CENTER">
                      <font>
                         <Font name="System Bold" size="32.0" />
@@ -54,15 +54,15 @@
                         <Font name="System Bold" size="32.0" />
                      </font>
                   </Label>
-                  <DatePicker layoutX="115.0" layoutY="320.0" prefHeight="34.0" prefWidth="183.0" promptText="End Date" />
-                  <TextField layoutX="308.0" layoutY="320.0" prefHeight="34.0" prefWidth="75.0" promptText="Hour" />
-                  <TextField layoutX="406.0" layoutY="320.0" prefHeight="34.0" prefWidth="75.0" promptText="Minute" />
+                  <DatePicker fx:id="endDateField" layoutX="115.0" layoutY="320.0" prefHeight="34.0" prefWidth="183.0" promptText="End Date" />
+                  <TextField fx:id="endHourField" layoutX="308.0" layoutY="320.0" prefHeight="34.0" prefWidth="75.0" promptText="Hour" />
+                  <TextField fx:id="endMinuteField" layoutX="406.0" layoutY="320.0" prefHeight="34.0" prefWidth="75.0" promptText="Minute" />
                   <Label layoutX="389.0" layoutY="306.0" prefHeight="54.0" prefWidth="4.0" text=":" textAlignment="CENTER">
                      <font>
                         <Font name="System Bold" size="32.0" />
                      </font>
                   </Label>
-                  <TextField layoutX="205.0" layoutY="415.0" prefHeight="30.0" prefWidth="186.0" promptText="Hours" />
+                  <TextField fx:id="totalHoursField" layoutX="205.0" layoutY="415.0" prefHeight="30.0" prefWidth="186.0" promptText="Hours" />
                   <Label layoutX="44.0" layoutY="370.0" prefHeight="28.0" prefWidth="527.0" text="How many hours will this event most likely take to complete?" textAlignment="CENTER">
                      <font>
                         <Font name="System Bold" size="18.0" />
@@ -74,23 +74,23 @@
                         <Font name="System Bold" size="18.0" />
                      </font>
                   </Label>
-                  <CheckBox layoutX="143.0" layoutY="498.0" mnemonicParsing="false" text="Calendar" />
-                  <CheckBox layoutX="225.0" layoutY="498.0" mnemonicParsing="false" text="Countdowns" />
-                  <CheckBox layoutX="327.0" layoutY="498.0" mnemonicParsing="false" text="Schedule" />
-                  <CheckBox layoutX="414.0" layoutY="498.0" mnemonicParsing="false" text="To Do List" />
+                  <CheckBox fx:id="showOnCalendar" layoutX="143.0" layoutY="498.0" mnemonicParsing="false" text="Calendar" />
+                  <CheckBox fx:id="showOnCountdown" layoutX="225.0" layoutY="498.0" mnemonicParsing="false" text="Countdowns" />
+                  <CheckBox fx:id="showOnSchedule" layoutX="327.0" layoutY="498.0" mnemonicParsing="false" text="Schedule" />
+                  <CheckBox fx:id="showOnToDo" layoutX="414.0" layoutY="498.0" mnemonicParsing="false" text="To Do List" />
                   <Label layoutX="173.0" layoutY="537.0" prefHeight="28.0" prefWidth="250.0" text="How important is this event?" textAlignment="CENTER">
                      <font>
                         <Font name="System Bold" size="18.0" />
                      </font>
                   </Label>
                   <Label alignment="CENTER" layoutX="41.0" layoutY="558.0" prefHeight="22.0" prefWidth="527.0" text="This value is used when generating schedules. Higher values of importance are always prioritized" textAlignment="CENTER" />
-                  <ChoiceBox layoutX="171.0" layoutY="580.0" prefHeight="26.0" prefWidth="253.0" />
+                  <ChoiceBox fx:id="importantBox2" layoutX="171.0" layoutY="580.0" prefHeight="26.0" prefWidth="253.0" />
                   <Label alignment="CENTER" layoutX="145.0" layoutY="616.0" prefHeight="47.0" prefWidth="304.0" text="Organizational Tag" textAlignment="CENTER">
                      <font>
                         <Font name="System Bold" size="32.0" />
                      </font>
                   </Label>
-                  <TextField layoutX="172.0" layoutY="686.0" prefHeight="30.0" prefWidth="254.0" promptText="Organizational Tag" />
+                  <TextField fx:id="tagField" layoutX="172.0" layoutY="686.0" prefHeight="30.0" prefWidth="254.0" promptText="Organizational Tag" />
                   <Label alignment="CENTER" layoutX="167.0" layoutY="660.0" prefHeight="22.0" prefWidth="262.0" text="Entering a non existing tag will create a new tag" textAlignment="CENTER" />
                   <Label alignment="CENTER" layoutX="153.0" layoutY="724.0" prefHeight="47.0" prefWidth="304.0" text="Other Keywords" textAlignment="CENTER">
                      <font>
@@ -98,7 +98,7 @@
                      </font>
                   </Label>
                   <Label alignment="CENTER" layoutX="87.0" layoutY="760.0" prefHeight="22.0" prefWidth="455.0" text="Other keywords to find this event when searching. Seperate keywords with commas" textAlignment="CENTER" />
-                  <TextArea layoutX="84.0" layoutY="798.0" prefHeight="98.0" prefWidth="458.0" promptText="Enter keywords here" />
+                  <TextArea fx:id="keywordsField" layoutX="84.0" layoutY="798.0" prefHeight="98.0" prefWidth="458.0" promptText="Enter keywords here" />
                   <ComboBox fx:id="setTimeBox" layoutX="79.0" layoutY="143.0" prefHeight="29.0" prefWidth="436.0" />
                </children>
             </AnchorPane>
@@ -110,7 +110,7 @@
          </font>
       </Label>
       <Rectangle arcHeight="5.0" arcWidth="5.0" height="5.0" layoutX="501.0" layoutY="74.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="355.0" />
-      <Button layoutX="620.0" layoutY="660.0" mnemonicParsing="false" onAction="#switchToHomeScreen" prefHeight="50.0" prefWidth="126.0" text="Create Event">
+      <Button layoutX="620.0" layoutY="660.0" mnemonicParsing="false" onAction="#createEvent" prefHeight="50.0" prefWidth="126.0" text="Create Event">
          <font>
             <Font size="18.0" />
          </font>
