--- a/daytoday/src/daytoday/To_Do_List.fxml
+++ b/daytoday/src/daytoday/To_Do_List.fxml
@@ -3,34 +3,15 @@
 <?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="daytoday.SceneController">
    <children>
-      <ScrollPane hbarPolicy="NEVER" layoutX="91.0" layoutY="138.0" prefHeight="559.0" prefWidth="1078.0">
+      <ScrollPane fx:id="scrollField" hbarPolicy="NEVER" layoutX="91.0" layoutY="138.0" prefHeight="559.0" prefWidth="1078.0">
          <content>
-            <Accordion maxHeight="150.0" prefHeight="150.0" prefWidth="1063.0">
-               <panes>
-                  <TitledPane animated="false" maxHeight="150.0" minHeight="150.0" text="Test Title">
-                    <content>
-                      <AnchorPane minHeight="0.0" minWidth="0.0" />
-                    </content>
-                     <font>
-                        <Font name="System Bold" size="18.0" />
-                     </font>
-                  </TitledPane>
-                  <TitledPane animated="false" text="Test Title">
-                     <content>
-                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                     </content>
-                     <font>
-                        <Font name="System Bold" size="18.0" />
-                     </font>
-                  </TitledPane>
-               </panes></Accordion>
+            <Accordion fx:id="accordionField" maxHeight="150.0" prefHeight="150.0" prefWidth="1063.0" />
          </content>
       </ScrollPane>
       <Label layoutX="518.0" prefHeight="106.0" prefWidth="346.0" text="To Do List" textAlignment="CENTER">
