--- a/daytoday/src/daytoday/Home_Screen.fxml
+++ b/daytoday/src/daytoday/Home_Screen.fxml
@@ -35,7 +35,7 @@
          </image>
       </ImageView>
       <Button layoutX="513.0" layoutY="48.0" mnemonicParsing="false" onAction="#switchToDoList" opacity="0.0" prefHeight="239.0" prefWidth="239.0" text="Button" />
-      <Button layoutX="170.0" layoutY="39.0" mnemonicParsing="false" onAction="#switchToDoList" opacity="0.0" prefHeight="249.0" prefWidth="250.0" text="Button" />
+      <Button layoutX="170.0" layoutY="39.0" mnemonicParsing="false" onAction="#switchToCalendar" opacity="0.0" prefHeight="249.0" prefWidth="250.0" text="Button" />
       <Button layoutX="327.0" layoutY="386.0" mnemonicParsing="false" onAction="#switchToEventBuilder" opacity="0.0" prefHeight="249.0" prefWidth="250.0" text="Button" />
       <Button layoutX="694.0" layoutY="387.0" mnemonicParsing="false" onAction="#switchToDoList" opacity="0.0" prefHeight="249.0" prefWidth="250.0" text="Button" />
       <Button layoutX="860.0" layoutY="43.0" mnemonicParsing="false" onAction="#switchToDoList" opacity="0.0" prefHeight="249.0" prefWidth="250.0" text="Button" />
