--- a/daytoday/src/daytoday/Week_Calendar.fxml
+++ b/daytoday/src/daytoday/Week_Calendar.fxml
@@ -4,6 +4,8 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TitledPane?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Circle?>
 <?import javafx.scene.shape.Line?>
@@ -34,12 +36,12 @@
          </font>
       </Label>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#e41c1c" height="4.0" layoutX="466.0" layoutY="131.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="93.0" />
-      <Label alignment="CENTER" layoutX="522.0" text="1st - 7th">
+      <Label alignment="CENTER" layoutX="516.0" text="1st - 7th">
          <font>
             <Font name="System Bold" size="48.0" />
          </font>
       </Label>
-      <Label layoutX="593.0" layoutY="52.0" text="July">
+      <Label layoutX="582.0" layoutY="52.0" text="JULY">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
@@ -576,7 +578,7 @@
                   </AnchorPane>
                </content>
             </TitledPane>
-            <TitledPane animated="false" prefHeight="217.0" prefWidth="322.0" text="Saturday, July 6th">
+            <TitledPane animated="false" prefHeight="217.0" prefWidth="322.0" text="Friday, July 6th">
                <font>
                   <Font size="18.0" />
                </font>
@@ -682,7 +684,7 @@
                   </AnchorPane>
                </content>
             </TitledPane>
-            <TitledPane animated="false" prefHeight="129.0" prefWidth="838.0" text="Sunday, July 7th">
+            <TitledPane animated="false" prefHeight="129.0" prefWidth="838.0" text="Saturday, July 7th">
                <font>
                   <Font size="18.0" />
                </font>
@@ -790,12 +792,20 @@
             </TitledPane>
         </panes>
       </Accordion>
-      <Button layoutX="692.0" layoutY="98.0" mnemonicParsing="false" onAction="#switchToCalendar" opacity="0.0" prefHeight="35.0" prefWidth="120.0" text="Button" />
-      <Line endX="-44.20001220703125" endY="3.814697265625E-6" layoutX="532.0" layoutY="36.0" startX="-98.39996337890625" startY="3.814697265625E-6" stroke="#818181" strokeWidth="5.0" />
-      <Line endX="-87.20001220703125" endY="-26.60000228881836" layoutX="540.0" layoutY="42.0" startX="-111.20001220703125" startY="-7.799999237060547" stroke="#818181" strokeWidth="5.0" />
-      <Line endX="-82.5999755859375" endY="5.8000030517578125" layoutX="537.0" layoutY="52.0" startX="-105.20001220703125" startY="-14.264461517333984" stroke="#818181" strokeWidth="5.0" />
-      <Line endX="-32.0" endY="3.814697265625E-6" layoutX="825.0" layoutY="34.0" startX="-83.60003662109375" startY="3.814697265625E-6" stroke="#818181" strokeWidth="5.0" />
-      <Line endX="-87.20001220703125" endY="-26.60000228881836" layoutX="887.0" layoutY="40.0" rotate="-90.0" startX="-111.20001220703125" startY="-7.799999237060547" stroke="#818181" strokeWidth="5.0" />
-      <Line endX="-82.5999755859375" endY="5.8000030517578125" layoutX="882.0" layoutY="53.0" rotate="-90.0" startX="-107.79998779296875" startY="-15.999996185302734" stroke="#818181" strokeWidth="5.0" />
+      <Button layoutX="675.0" layoutY="100.0" mnemonicParsing="false" onAction="#switchToCalendar" opacity="0.0" prefHeight="35.0" prefWidth="133.0" text="Button" />
+      <Line endX="-44.20001220703125" endY="3.814697265625E-6" layoutX="526.0" layoutY="36.0" startX="-98.39996337890625" startY="3.814697265625E-6" stroke="#818181" strokeWidth="5.0" />
+      <Line endX="-87.20001220703125" endY="-26.60000228881836" layoutX="534.0" layoutY="42.0" startX="-111.20001220703125" startY="-7.799999237060547" stroke="#818181" strokeWidth="5.0" />
+      <Line endX="-82.5999755859375" endY="5.8000030517578125" layoutX="531.0" layoutY="52.0" startX="-105.20001220703125" startY="-14.264461517333984" stroke="#818181" strokeWidth="5.0" />
+      <Line endX="-32.0" endY="3.814697265625E-6" layoutX="819.0" layoutY="34.0" startX="-83.60003662109375" startY="3.814697265625E-6" stroke="#818181" strokeWidth="5.0" />
+      <Line endX="-87.20001220703125" endY="-26.60000228881836" layoutX="881.0" layoutY="40.0" rotate="-90.0" startX="-111.20001220703125" startY="-7.799999237060547" stroke="#818181" strokeWidth="5.0" />
+      <Line endX="-82.5999755859375" endY="5.8000030517578125" layoutX="876.0" layoutY="53.0" rotate="-90.0" startX="-107.79998779296875" startY="-15.999996185302734" stroke="#818181" strokeWidth="5.0" />
+      <Button layoutX="895.0" layoutY="100.0" mnemonicParsing="false" onAction="#switchToYearly" opacity="0.0" prefHeight="35.0" prefWidth="109.0" text="Button" />
+      <Button layoutX="272.0" layoutY="100.0" mnemonicParsing="false" onAction="#switchToDaily" opacity="0.0" prefHeight="35.0" prefWidth="102.0" text="Button" />
+      <ImageView fitHeight="64.0" fitWidth="64.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../home_icon.png" />
+         </image>
+      </ImageView>
+      <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#switchToHomeScreen" opacity="0.0" prefHeight="64.0" prefWidth="64.0" text="Button" />
    </children>
 </AnchorPane>
