--- a/daytoday/src/daytoday/Year_Calendar.fxml
+++ b/daytoday/src/daytoday/Year_Calendar.fxml
@@ -1,60 +1,117 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="720.0" maxWidth="1280.0" minHeight="720.0" minWidth="1280.0" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="daytoday.SceneController">
    <children>
-      <Label layoutX="263.0" layoutY="8.0" text="2021" textAlignment="CENTER">
+      <Label alignment="CENTER" layoutX="548.0" text="2022">
          <font>
-            <Font name="System Bold" size="32.0" />
+            <Font name="System Bold" size="52.0" />
          </font>
       </Label>
-      <Label layoutX="130.0" layoutY="60.0" text="DAILY">
+      <Label layoutX="288.0" layoutY="100.0" prefWidth="70.0" text="DAILY">
          <font>
-            <Font name="System Bold" size="16.0" />
+            <Font name="System Bold" size="24.0" />
          </font>
       </Label>
-      <Label layoutX="204.0" layoutY="60.0" text="WEEKLY">
+      <Label layoutX="467.0" layoutY="100.0" text="WEEKLY">
          <font>
-            <Font name="System Bold" size="16.0" />
+            <Font name="System Bold" size="24.0" />
          </font>
       </Label>
-      <Label layoutX="286.0" layoutY="60.0" text="MONTHLY">
+      <Label layoutX="682.0" layoutY="100.0" text="MONTHLY">
          <font>
-            <Font name="System Bold" size="16.0" />
+            <Font name="System Bold" size="24.0" />
          </font>
       </Label>
-      <Label layoutX="383.0" layoutY="60.0" text="YEARLY">
+      <Label layoutX="906.0" layoutY="100.0" text="YEARLY">
          <font>
-            <Font name="System Bold" size="16.0" />
+            <Font name="System Bold" size="24.0" />
          </font>
       </Label>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#e41c1c" height="6.0" layoutX="380.0" layoutY="82.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="65.0" />
-      <Label layoutX="55.0" layoutY="96.0" prefHeight="68.0" prefWidth="481.0" text="January       Febuary         March" textAlignment="CENTER">
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#e41c1c" height="5.0" layoutX="903.0" layoutY="132.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="93.0" />
+      <Button layoutX="466.0" layoutY="100.0" mnemonicParsing="false" onAction="#switchToWeekly" opacity="0.0" prefHeight="35.0" prefWidth="94.0" text="Button" />
+      <Text layoutX="93.0" layoutY="258.0" strokeType="OUTSIDE" strokeWidth="0.0" text="January">
          <font>
-            <Font name="System Bold" size="32.0" />
+            <Font name="System Bold" size="64.0" />
          </font>
-      </Label>
-      <Label layoutX="55.0" layoutY="155.0" prefHeight="68.0" prefWidth="481.0" text="  April             May              June" textAlignment="CENTER">
+      </Text>
+      <Text layoutX="483.0" layoutY="254.0" strokeType="OUTSIDE" strokeWidth="0.0" text="February">
          <font>
-            <Font name="System Bold" size="32.0" />
+            <Font name="System Bold" size="64.0" />
          </font>
-      </Label>
-      <Label layoutX="45.0" layoutY="215.0" prefHeight="68.0" prefWidth="550.0" text="   July            August      September" textAlignment="CENTER">
+      </Text>
+      <Text layoutX="941.0" layoutY="253.0" strokeType="OUTSIDE" strokeWidth="0.0" text="March">
          <font>
-            <Font name="System Bold" size="32.0" />
+            <Font name="System Bold" size="64.0" />
          </font>
-      </Label>
-      <Label layoutX="45.0" layoutY="280.0" prefHeight="68.0" prefWidth="550.0" text="October     November    December" textAlignment="CENTER">
+      </Text>
+      <Text layoutX="124.0" layoutY="390.0" strokeType="OUTSIDE" strokeWidth="0.0" text="April">
          <font>
-            <Font name="System Bold" size="32.0" />
+            <Font name="System Bold" size="64.0" />
          </font>
-      </Label>
-      <Line endX="414.800048828125" endY="-1.52587890625E-5" layoutX="146.0" layoutY="105.0" startX="-100.0" />
-      <Line endX="414.800048828125" endY="-1.52587890625E-5" layoutX="146.0" layoutY="345.0" startX="-100.0" />
+      </Text>
+      <Text layoutX="553.0" layoutY="382.0" strokeType="OUTSIDE" strokeWidth="0.0" text="May">
+         <font>
+            <Font name="System Bold" size="64.0" />
+         </font>
+      </Text>
+      <Text layoutX="969.0" layoutY="389.0" strokeType="OUTSIDE" strokeWidth="0.0" text="June">
+         <font>
+            <Font name="System Bold" size="64.0" />
+         </font>
+      </Text>
+      <Text layoutX="145.0" layoutY="529.0" strokeType="OUTSIDE" strokeWidth="0.0" text="July">
+         <font>
+            <Font name="System Bold" size="64.0" />
+         </font>
+      </Text>
+      <Text layoutX="513.0" layoutY="518.0" strokeType="OUTSIDE" strokeWidth="0.0" text="August">
+         <font>
+            <Font name="System Bold" size="64.0" />
+         </font>
+      </Text>
+      <Text layoutX="864.0" layoutY="517.0" strokeType="OUTSIDE" strokeWidth="0.0" text="September">
+         <font>
+            <Font name="System Bold" size="64.0" />
+         </font>
+      </Text>
+      <Text layoutX="75.0" layoutY="645.0" strokeType="OUTSIDE" strokeWidth="0.0" text="October">
+         <font>
+            <Font name="System Bold" size="64.0" />
+         </font>
+      </Text>
+      <Text layoutX="449.0" layoutY="645.0" strokeType="OUTSIDE" strokeWidth="0.0" text="November">
+         <font>
+            <Font name="System Bold" size="64.0" />
+         </font>
+      </Text>
+      <Text layoutX="877.0" layoutY="638.0" strokeType="OUTSIDE" strokeWidth="0.0" text="December">
+         <font>
+            <Font name="System Bold" size="64.0" />
+         </font>
+      </Text>
+      <Button layoutX="674.0" layoutY="98.0" mnemonicParsing="false" onAction="#switchToCalendar" opacity="0.0" prefHeight="42.0" prefWidth="135.0" text="Button" />
+      <Line endX="-44.20001220703125" endY="3.814697265625E-6" layoutX="527.0" layoutY="38.0" startX="-98.39996337890625" startY="3.814697265625E-6" stroke="#818181" strokeWidth="5.0" />
+      <Line endX="-87.20001220703125" endY="-26.60000228881836" layoutX="535.0" layoutY="44.0" startX="-111.20001220703125" startY="-7.799999237060547" stroke="#818181" strokeWidth="5.0" />
+      <Line endX="-82.5999755859375" endY="5.8000030517578125" layoutX="532.0" layoutY="54.0" startX="-105.20001220703125" startY="-14.264461517333984" stroke="#818181" strokeWidth="5.0" />
+      <Line endX="-32.0" endY="3.814697265625E-6" layoutX="820.0" layoutY="36.0" startX="-83.60003662109375" startY="3.814697265625E-6" stroke="#818181" strokeWidth="5.0" />
+      <Line endX="-87.20001220703125" endY="-26.60000228881836" layoutX="882.0" layoutY="42.0" rotate="90.0" startX="-111.20001220703125" startY="-7.799999237060547" stroke="#818181" strokeWidth="5.0" />
+      <Line endX="-82.5999755859375" endY="5.8000030517578125" layoutX="877.0" layoutY="55.0" rotate="90.0" startX="-107.79998779296875" startY="-15.999996185302734" stroke="#818181" strokeWidth="5.0" />
+      <Button layoutX="276.0" layoutY="100.0" mnemonicParsing="false" onAction="#switchToDaily" opacity="0.0" prefHeight="35.0" prefWidth="94.0" text="Button" />
+      <ImageView fitHeight="64.0" fitWidth="64.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../home_icon.png" />
+         </image>
+      </ImageView>
+      <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#switchToHomeScreen" opacity="0.0" prefHeight="64.0" prefWidth="64.0" text="Button" />
    </children>
 </AnchorPane>
